<resources>
    <string name="app_name">TimedMessage</string>
    <string name="new_message">New Message</string>
    <string name="timed_message">Timed Message</string>
    <string name="phone_number">Phone Number:</string>
    <string name="phone_number_hint">Enter Recipient Number here</string>
    <string name="text_message_label">Message:</string>
    <string name="text_message_hint">Type your message here</string>
    <string name="send_now">Send Now</string>
    <string name="send_later">Send Later</string>
    <string name="delete">Delete</string>
    <string name="schedule_message">Re-Schedule Message</string>
    <string name="search">Search Contacts</string>
    <string name="schedule_date">Schedule Date:</string>
    <string name="show_scheduled_message">Show Scheduled Message</string>
    <string name="due_date">Due Date:</string>
    <string name="due_time">Due Time:</string>
    <string name="not_set">Not Set</string>
</resources>
